@@ -16,6 +16,7 @@ Risk 1.1.0.1
 
 	in FlashGUI when u make a new game, it remembers your old player state
 	bug with trading cards in CARD_INCREASING_SET fixed
+	fix to trade button in FlashGUI Cards Dialog not being disabled
 
 Risk 1.1.0.0 (02.06.2010)
 
